--- a/readme.org
+++ b/readme.org
@@ -1,4 +1,16 @@
-熊猫围棋助手是一个网络围棋辅助工具，同时也是一个开源项目。
-它的目标是成为一个通用的围棋辅助工具，能够支持各个围棋软件
-（比如QQ围棋、弈城围棋等等），能够代替用户下棋、对棋局进行
-形势分析。
+#+TAGS: org-mode, github
+#+TITLE 熊猫围棋助手(GoPlus)简介
+
+熊猫围棋助手是一个网络围棋辅助工具，同时也是一个 [[http://code.google.com/p/goplus/][开源项目]] 。它能够支持QQ围棋、弈城围棋，能够代替用户下棋。
+
+* 安装
+<<熊猫围棋助手>>为绿色版本，解压运行即可。
+
+* 使用方法
+使用<<熊猫围棋助手>>，一般按照如下的流程：
+    - 运行GoPlus.exe
+    - 单击托盘Logo打开主窗口
+    - 点设置，设置棋盘大小、智能引擎、应用程序（QQ围棋、弈城围棋）、外挂方式等
+    - 运行要外挂的程序（QQ围棋、弈城围棋）
+    - 在主窗口选择执黑或白
+    - 点开始
