--- a/readme.org
+++ b/readme.org
@@ -1,7 +1,9 @@
 #+TAGS: org-mode, github
 #+TITLE 熊猫围棋助手(GoPlus)简介
 
-熊猫围棋助手是一个网络围棋辅助工具，同时也是一个 [[http://code.google.com/p/goplus/][开源项目]] 。它能够支持QQ围棋、弈城围棋，能够代替用户下棋。
+熊猫围棋助手是windows平台下的一个网络围棋辅助工具，同时也是一个 [[http://code.google.com/p/goplus/][开源项目]] 。它能够支持QQ围棋、弈城围棋，能够代替用户下棋。
+
+项目原来放在 https://code.google.com/p/goplus/ ，现在github上也保留一份，项目不再更新维护。
 
 * 安装
 <<熊猫围棋助手>>为绿色版本，解压运行即可。
